// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FinderItem > Drag & drop > should match snapshot if dragEnabled is \`true\` 1`] = `
<div data-v-2a66825e="" class="item draggable" role="button" draggable="true" aria-expanded="false">
  <!--v-if-->
  <!--v-if-->
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem > Drag & drop > should match snapshot if dragEnabled is a function returning \`false\` 1`] = `
<div data-v-2a66825e="" class="item draggable" role="button" draggable="true" aria-expanded="false">
  <!--v-if-->
  <!--v-if-->
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem > Drag & drop > should match snapshot if dragEnabled is a function returning \`true\` 1`] = `
<div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false">
  <!--v-if-->
  <!--v-if-->
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem > Expand > should match snapshot if expanded 1`] = `
<div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false">
  <!--v-if-->
  <!--v-if-->
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem > Selection > should match snapshot if selectable 1`] = `
<div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false">
  <!--v-if--><input data-v-2a66825e="" type="checkbox">
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;

exports[`FinderItem > should match snapshot 1`] = `
<div data-v-2a66825e="" class="item" role="button" draggable="false" aria-expanded="false">
  <!--v-if-->
  <!--v-if-->
  <div data-v-2a66825e="" class="inner-item"></div>
  <div data-v-25a3a149="" data-v-2a66825e="" class="arrow"></div>
</div>
<!--teleport start-->
<!--teleport end-->
`;
